# Loomic

./: .gitignore  .gitmodules  README.md  backend-frontend-gap-report.md
.github/workflows/: deploy.yml
cli/: README.md  loomic.py
cli/tests/: test_loomic.py
client/: .env.example  README.md  package-lock.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/api/auth/login/: route.ts
client/src/app/api/auth/logout/: route.ts
client/src/app/api/auth/refresh/: route.ts
client/src/app/api/auth/register/: route.ts
client/src/app/api/chat/connect/: route.ts
client/src/app/api/chat/disconnect/: route.ts
client/src/app/api/chat/events/: route.ts
client/src/app/api/chat/send/: route.ts
client/src/app/api/chat/socket-config/: route.ts
client/src/app/api/conversations/: route.ts
client/src/app/api/conversations/[id]/messages/: route.ts
client/src/app/api/conversations/[id]/read/: route.ts
client/src/app/api/files/[uuid]/: route.ts
client/src/app/api/groups/: route.ts
client/src/app/api/groups/[id]/: route.ts
client/src/app/api/groups/[id]/members/: route.ts
client/src/app/api/groups/[id]/members/[uid]/: route.ts
client/src/app/api/messages/[msg_id]/: route.ts
client/src/app/api/push/register/: route.ts
client/src/app/api/upload/: route.ts
client/src/app/api/users/[id]/: route.ts
client/src/app/api/users/[id]/presence/: route.ts
client/src/app/api/users/search/: route.ts
client/src/app/chat/: page.tsx
client/src/components/: ChatPlaceholder.tsx  ChatWorkspace.tsx  LoginExperience.tsx  SimpleChatLayout.tsx
client/src/lib/: chat-protocol.ts  chat-types.ts  jwt.ts  loomic.ts  session.ts
client/src/lib/server/: chat-gateway.ts
python_test/: README.md  chat_pb2.py  test_e2e_messaging.py
server/: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  conanfile.py  dev.cmd  dev.ps1  docker-compose.prod.yml  docker-compose.yml  tsan_suppressions.txt  vcpkg-configuration.json  vcpkg.json
server/.claude/: frontend-integration.md  settings.local.json
server/.github/workflows/: ci.yml  deploy.yml
server/api/: openapi.json
server/certs/: gen_cert.sh
server/config/: server.json
server/db/migrations/: V1__create_auth_tables.sql  V2__create_messages_keyspace.cql  V3__create_conv_members.sql  V4__messages_conv_schema.cql  V5__create_conversations.sql  V6__create_groups.sql  V7__phase6_ux.sql
server/include/LoomicServer/auth/: JwtService.hpp  PasswordService.hpp  SnowflakeGen.hpp
server/include/LoomicServer/core/: Server.hpp
server/include/LoomicServer/db/: CassandraClient.hpp  DbClient.hpp  PgPool.hpp  RedisClient.hpp
server/include/LoomicServer/http/: AuthHandler.hpp  ConversationsHandler.hpp  DocsHandler.hpp  GroupsHandler.hpp  HealthHandler.hpp  HttpServer.hpp  MessagesHandler.hpp  ReceiptsHandler.hpp  UsersHandler.hpp
server/include/LoomicServer/metrics/: MetricsRegistry.hpp
server/include/LoomicServer/middleware/: RateLimiter.hpp
server/include/LoomicServer/push/: PushHandler.hpp  PushService.hpp
server/include/LoomicServer/tcp/: ISession.hpp  Session.hpp  SessionRegistry.hpp  TcpServer.hpp  frame.hpp
server/include/LoomicServer/util/: Config.hpp  Logger.hpp  RequestContext.hpp  Uuid.hpp
server/include/LoomicServer/ws/: WebSocketSession.hpp
server/monitoring/: prometheus.yml
server/monitoring/grafana/dashboards/: loomic.json
server/monitoring/grafana/provisioning/dashboards/: dashboards.yml
server/monitoring/grafana/provisioning/datasources/: prometheus.yml
server/nginx/: nginx.conf
server/proto/: chat.proto
server/src/: main  main.cpp
server/src/auth/: JwtService.cpp  PasswordService.cpp  SnowflakeGen.cpp
server/src/core/: Server.cpp
server/src/db/: CassandraClient.cpp  PgPool.cpp  RedisClient.cpp
server/src/http/: AuthHandler.cpp  ConversationsHandler.cpp  DocsHandler.cpp  GroupsHandler.cpp  HealthHandler.cpp  HttpServer.cpp  MessagesHandler.cpp  ReceiptsHandler.cpp  UsersHandler.cpp
server/src/metrics/: MetricsRegistry.cpp
server/src/middleware/: RateLimiter.cpp
server/src/push/: PushHandler.cpp  PushService.cpp
server/src/tcp/: Session.cpp  SessionRegistry.cpp  TcpServer.cpp  frame.cpp
server/src/util/: Config.cpp  Logger.cpp  Uuid.cpp
server/src/ws/: WebSocketSession.cpp
server/tests/: CMakeLists.txt  test_auth.cpp  test_config.cpp  test_frame.cpp  test_groups.cpp  test_hardening.cpp  test_phase6.cpp  test_session.cpp
server/tools/: load_client.cpp
server/vcpkg-overlay-ports/cassandra-cpp-driver/: portfile.cmake  vcpkg.json
server/vcpkg-overlay-ports/protobuf/: portfile.cmake
